overlays/qa/patches/tyk-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyk-ingress
  namespace: candig
spec:
  rules:
  - host: tyk.qa.dhdp.ca
